[package]
name = "docs-server"
edition = "2024"
version = "1.2.1"
authors = ["Rafael Bradley"]
license = "MIT"
description = "A minimal live-reload HTTP server for rustdoc."
repository = "https://github.com/Nekidev/docs-server"

[dependencies]
axum = "0.8.9"
log = "0.4.29"
notify = "8.2.0"
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread"] }
open = "5.3.5"
clap = { version = "4.6.1", features = ["derive"] }
tower-http = { version = "0.6.11", features = ["fs"] }
cargo_metadata = "0.23.1"
pretty-logging = "0.2.0"
pathdiff = "0.2.3"

[[bin]]
path = "src/main.rs"
name = "docs"
